# private_vault_cli

./: .gitignore  Cargo.toml
src/: .env  main.rs
src/adapters/: aes_crypto.rs  cli.rs  file_storage.rs  mod.rs
src/adapters/cli/: commands.rs  mod.rs  ui.rs
src/adapters/inbound/: cli.rs
src/adapters/outbound/: aes_crypto.rs  file_storage.rs  mod.rs
src/application/: commands.rs  engine.rs  engine_trait.rs  mod.rs
src/core/: mod.rs
src/domain/: commands.rs  entry.rs  errors.rs  mod.rs  models.rs  ports.rs  traits.rs  vault_state.rs
src/utils/: parser.rs
