[package]
name = "vault"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
chrono = { version = "0.4.41", features = ["serde"] }
dirs-2 = "3.0.1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10.9"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
zeroize = { version = "1.8.2", features = ["derive"] }
