[package]
name = "vault"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.100"
argon2 = "0.5.3"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
dirs-2 = "3.0.1"
rpassword = "7.4.0"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10.9"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
wincode = { version = "0.2.5", features = ["derive"] }
zeroize = { version = "1.8.2", features = ["derive"] }
